# IRS

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  notes.txt
models/panda/: cleanMeshes.py  panda.g
models/pr2/: pr2_modifications.g
models/scenes/: fol-pnp-switch.g  handover_room.g  kitchen_room.g  pouring_room.g
ors/: Edited_CARL.ipynb  Edited_RRL.ipynb  ORS_Model.ipynb  ORS_data_preprocessing.ipynb
scenes/: kitchen_room.g
src/: Compare.cpp  Compare.h  CounterfactualLGP.cpp  CounterfactualLGP.h  GenerateDecisionRule.cpp  GenerateDecisionRule.h  GenericFolFile.cpp  GenericFolFile.h  MiniLGP.cpp  MiniLGP.h  Utils.cpp  Utils.h
test/handOver/: fol-pnp-switch.g  main.cpp
test/pickAndPLace/: fol-pnp-switch.g  main.cpp  rai.cfg
test/pickAndPlace/: fol-pnp-switch.g  main.cpp  rai.cfg
test/pouring/: fol-pnp-switch-S.g  fol-pnp-switch.g  main.cpp
test/serving/: fol-pnp-switch-S.g  fol-pnp-switch.g  main.cpp
